# eco-hackaton-backend

./: pyproject.toml
monitor_server/: device_emulator.py  server.py  service.db
monitor_server/modules/models/: db_entities.py
