[tool.poetry]
name = "monitor-server"
version = "0.1.0"
description = ""
authors = ["pristavkaegor03@gmail.com <pristavka_egor>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"
fastapi = "^0.110.2"
keyring = "^25.2.0"
sqlalchemy = "^2.0.29"
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
monitor-server = "monitor_server.server:main"
